# cost

./: .gitignore  Cargo.toml  config.example.toml  default.nix
.github/workflows/: ci.yml
batch/: Cargo.toml  config.example.toml
batch/src/: main.rs
ce/: Cargo.toml
ce/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
myerrors/: Cargo.toml
myerrors/src/: lib.rs
myhandlers/: Cargo.toml
myhandlers/src/: lib.rs
npins/: sources.json
server/: Cargo.toml
server/src/: config.rs  handlers.rs  main.rs  service.rs  tests.rs
server/src/handlers/: admin.rs  mod.rs  user.rs
server/src/pages/: costs.rs  home.rs  mod.rs  models.rs  monthly.rs  users.rs
templates/: Cargo.toml
templates/src/: lib.rs
